--- a/1. Build and deploy your first website/12. Proper document structure/blog.html
+++ b/1. Build and deploy your first website/12. Proper document structure/blog.html
@@ -1,6 +1,14 @@
-<!DOCTYPE><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"><h1>Not much to see here</h1>
-<p>Return <a href="index.html">back to Google.</a></p>
-
+<!doctype html>
+<html>
+    <head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    </head>
+    
+    <body>
+        <h1>Not much to see here</h1>
+        <p>Return <a href="index.html">back to Google.</a></p>
+    </body>
+</html>
 <!--
 Challenge:
 Add proper HTML document structure to this page.
