--- a/1. Build and deploy your first website/13. Aside - Lists/index.html
+++ b/1. Build and deploy your first website/13. Aside - Lists/index.html
@@ -1,7 +1,16 @@
 <!doctype html>
 <html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"></head>
-    <body></body>
+    <head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    </head>
+    <body>
+        <h1>My favourite foods</h1>
+        <ol>
+            <li>Tacos</li>
+            <li>Pizza</li>
+            <li>Hamburger</li>
+        </ol>
+    </body>
 </html>
 
 <!--
