--- a/1. Build and deploy your first website/14. Build a Personal Website/index.html
+++ b/1. Build and deploy your first website/14. Build a Personal Website/index.html
@@ -10,5 +10,18 @@
         Challenge 1:
         Write the HTML for your personal website.
         -->
+        <image src="prof.jpg"></image>
+        <h1>Hi, my name is Jonathan</h1>
+        <h2>Fun facts about me:</h2>
+        <ul>
+            <li>32 years old</li>
+            <li>Live in the USA</li>
+            <li>Paint miniatures for fun</li>
+        </ul>
+        <p>Please connect with me on
+            <a href="https://www.linkedin.com/in/jonathan-s-burns/" target="_blank">LinkedIn here.</a>
+        </p>
+        <input type="text" placeholder="Enter email...">
+        <button>Join newsletter</button>
     </body>
 </html>
